<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Result_Activity"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:textColor="@color/black"
        android:text="@string/result_text_string_1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="100sp"
        android:text="@string/result_text_string_2"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bmi_indicator"
        />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/card_color">

            <TextView
                android:id="@+id/result_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="16.9sp"
                android:lineSpacingExtra="2.1dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_string_4"
                android:padding="9dp"
                android:textSize="16.9sp"
                android:lineSpacingExtra="2.1dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reCalculate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/resultactivity_button_text_string"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

</LinearLayout>
