<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainactivity_text_string_1"
                android:textSize="17sp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_marginRight="15dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">
                    <EditText
                        android:id="@+id/weightInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_color"
                        android:paddingStart="10dp"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainactivity_text_string_2"
                android:textSize="18sp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_marginRight="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/heightFt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/card_color"
                    android:paddingStart="10dp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainactivity_text_string_3"
            android:textSize="18sp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginRight="15dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/heightIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:paddingStart="10dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/calButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/mainactivity_button_text_string"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

</LinearLayout>